--- a/css/distribution.css
+++ b/css/distribution.css
@@ -15,12 +15,17 @@ a {
     padding: 0 15px;
 }
 
+.swiper-button-product .swiper-button-next {
+    position: absolute;
+    right: -30px;
+}
+
 @media(min-width:576px) {
     #distribution-area {
         width: 540px;
     }
     .swiper-button-product .swiper-button-next {
-        right: -40px !important;
+        right: -40px ;
     }
 }
 
@@ -42,7 +47,7 @@ a {
         width: 1140px;
     }
     .swiper-button-product .swiper-button-next {
-        right: -25px !important;
+        right: -25px;
     }
 }
 
@@ -51,10 +56,7 @@ a {
     bottom: 340px;
 }
 
-.swiper-button-product .swiper-button-next {
-    position: absolute;
-    right: -30px;
-}
+
 
 .swiper-button-product .swiper-button-prev {
     position: absolute;
@@ -96,14 +98,14 @@ a {
     text-align: center;
     font-size: 18px;
     margin: 0px 0px 12px;
-    height: calc(100% - 2px) !important;
+    height: calc(100% - 2px) ;
 }
 
 
 #distribution .swiper-button-next,
 .swiper-button-prev {
     color: #FFFFFF;
-    width: 27px !important;
+    width: 27px ;
 }
 
 #distribution .card-body {
