--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -322,25 +322,15 @@
 
 /* 彈跳視窗上半部swiper 左邊直的是主要 右邊是sub次要 */
 
-#pop-window .swiper {
-    width: 420px;
-    height:456px;
-}
 
-#pop-window .swiper {
+/* 上方swiper 樣式 */
+#pop-window .swiper-pop-top {
     width: 20%;
     height: 456px;
     margin-left: auto;
-    margin-right: auto;
-}
+    margin-right: auto;}
 
-
-#pop-window .my-swiper-sub {
-    height: 70%;
-    width: 70%;
-}
-
-#pop-window .my-swiper {
+#pop-window .my-pop-swiper {
     height: 90%;
     box-sizing: border-box;
     padding: 10px 0;
@@ -348,12 +338,15 @@
 
 
 
-#pop-window .swiper-slide {
-    background-size: cover;
-    background-position: center;
+#pop-window .my-pop-swiper-sub {
+    height: 70%;
+    width: 70%;
 }
 
-#pop-window .swiper-slide {
+
+#pop-window .swiper-pop-top-slide {
+    background-size: cover;
+    background-position: center;
     text-align: center;
     font-size: 18px;
     background: #fff;
@@ -363,49 +356,128 @@
 }
 
 
-
-#pop-window .my-swiper .swiper-slide {
+#pop-window .my-pop-swiper .swiper-slide {
     width: 100%;
     height: 100%;
 }
 
 
-#pop-window .my-swiper .swiper-slide-thumb-active {
-    /* opacity: 1; */
+#pop-window .my-pop-swiper .swiper-slide-thumb-active {
     border: 2px solid #ffe282;
 }
 
 
 
-#pop-window .swiper-slide img {
+#pop-window .swiper-pop-top-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
-#pop-window .swiper-slide img {
+
+/* tab-nav switch  */
+
+/* .tab-nav {
+    width: 84%;
+    display: flex;
+    flex-direction: row;
+}
+
+.tabs {
+    position: relative;
+    margin: 3rem 0;
+    background-color: #495057;
+    height: 14.75rem;
+}
+
+.tabs::before,
+.tabs::after {
+    content: "";
+    display: table;
+}
+
+.tab-switch {
+    display: none;
+    
+}
+
+.tab-label {
+    position: relative;
     display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    line-height: 2.75em;
+    height: 3em;
+    padding: 0 1.618em;
+    background: #1abc9c;
+    border-color: #dee2e6 #dee2e6 #f8fafc;
+    color: #fff;
+    cursor: pointer;
+    top: 0;
+    transition: all 0.25s;
 }
 
-/* swiper button style */
-
-/* #pop-window .swiper-button-next::after {
-    color: #fff;
+.tab-label:hover {
+    top: -0.25rem;
+    transition: top 0.25s;
 }
 
-#pop-window .swiper-button-prev::after {
-    color: #fff;
+
+.tab-content {
+    position: absolute;
+    margin-right: -100% ;
+    width: 1100px;
+    z-index: 1;
+    left: 20px;
+    padding: 1.618rem;
+    background: #222222;
+    color:#ffffff;
+    border-bottom: 0.25rem solid #bdc3c7;
+    opacity: 0;
+    transition: all 0.35s;
+}
+
+.tab-switch:checked+.tab-label {
+    background: #222222;
+    color: #ffe282;
+    border-bottom: 0;
+    border-color: 2px solid #dee2e6 #dee2e6 #f8fafc;
+    transition: all 0.35s;
+    z-index: 1;
+    top: -0.0625rem;
+}
+
+.tab-switch:checked+label+.tab-content {
+    z-index: 2;
+    opacity: 1;
+    border-color: #dee2e6 #dee2e6 #f8fafc;
+    transition: all 0.35s;
 } */
-/* 
-#pop-window .display-vertical {
+
+
+.tab-content {
     display: flex;
     flex-direction: column;
-    height: 456px;
-} */
+    position: relative;
+    margin: 3rem 0;
+    background-color: transparent;
+    height: auto;
+    color: #ffffff;
+}
+
+.tab-content > div {
+    display: none;  
+    background: #222222;
+    color: #ffffff;
+    border-bottom: 0.25rem solid #bdc3c7;
+    padding: 1.618rem;
+    opacity: 0;
+    transition: all 0.35s;
+}
+
+.tab-switch:checked + label + .tab-content > div {
+    display: block;
+    opacity: 1;
+}
 
 
 
@@ -413,14 +485,24 @@
 
 /* swiper 2 */
 
-/* #pop-window .swiper-button-product {
+
+a {
+    text-decoration: none;
+}
+
+.bottom-pop-window-swiper {
+    height: 1052px;
     position: relative;
-    bottom: 340px;
 }
 
 .swiper-button-product .swiper-button-next {
     position: absolute;
     right: -30px;
+}
+
+.swiper-button-product {
+    position: relative;
+    bottom: 340px;
 }
 
 .swiper-button-product .swiper-button-prev {
@@ -429,95 +511,38 @@
 }
 
 
-#pop-window .card-container {
+.card-container {
     max-width: 1140px;
     width: 65%;
     margin: auto;
 }
 
 @media screen and (min-width:900px) {
-    #pop-window .card-container {
+    .card-container {
         width: 80%;
     }
 }
 
 @media screen and (min-width:1400px) {
-    #pop-window .card-container {
+    .card-container {
         width: 100%;
     }
 }
 
-#pop-window .header .container {
-    height: 55px;
-    display: flex;
-    justify-content: start;
-}
-
-#pop-window .swiper {
+.swiper-pop-bottom {
     width: 100%;
     margin: 20px auto;
 }
 
-#pop-window .swiper-slide-commidity {
+.swiper-pop-bottom-slide {
     text-align: center;
     font-size: 18px;
     margin: 0px 0px 12px;
-    height: calc(100% - 2px) !important;
-}
-
-
-#pop-window .swiper-button-next,
-.swiper-button-prev {
-    color: #FFFFFF;
-    width: 27px !important;
-}
-
-#pop-window .card-body {
-    background: white;
-    max-width: 540px;
-    width: calc(100% - 2px);
-    border-radius: 3px;
-    border: 1px solid rgb(219, 219, 219);
-    box-shadow: none;
-    display: block;
-    min-width: 326px;
-    padding: 0px;
-}
-
-#pop-window .swiper-slide {
+    height: calc(100% - 2px);
     background: unset;
 }
 
-#pop-window .title {
-    padding-top: 100px;
-    margin-bottom: 68px;
-    display: flex;
-}
-
-.distribution-icon {
-    width: 30.05px;
-    height: 32px;
-    margin: 0 5px 0 0;
-}
-
-
-#pop-window .title-text {
-    color: white;
-}
-
-#pop-window .title-text-1 {
-    width: 56px;
-    height: 26px;
-    font-size: 14px;
-}
-
-#pop-window .title-text-2 {
-    width: 56px;
-    height: 14.4px;
-    font-size: 12px;
-}
-
-#pop-window .img-w-h-border-img {
+.img-w-h-border-img {
     width: 350px;
     height: 379px;
     background-image: url('/img/shop-img-border.png');
@@ -527,7 +552,7 @@
     top: 10px;
 }
 
-#pop-window .product-img {
+.product-img {
     width: 330px;
     height: 360px;
     position: absolute;
@@ -535,7 +560,7 @@
     top: 10px;
 }
 
-#pop-window .ask-icon {
+.ask-icon {
     position: absolute;
     width: 50px;
     height: 50px;
@@ -543,32 +568,70 @@
     top: 10px;
 }
 
+.ask-icon-hover {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    right: 0px;
+    top: 0px;
+}
 
+.direction-body {
+    width: 350px;
+    color: #fff;
+}
 
-#pop-window .commodity-title {
+@media (max-width:1400px) {
+
+    .direction-body {
+        margin: auto;
+    }
+}
+
+@media (max-width:540px) {
+
+    .img-w-h-border-img {
+        width: 100%;
+
+    }
+
+    .direction-body {
+        width: 100%;
+    }
+
+    .product-img-hover {
+        width: calc(100% - 20px);
+    }
+
+    .product-img {
+        width: calc(100% - 20px);
+    }
+}
+
+.commodity-title {
     height: 32px;
     font-size: 20px;
     margin-bottom: 15px;
 }
 
-#pop-window .commodity-title-english {
+.commodity-title-english {
     height: 42px;
     font-size: 14px;
     margin-bottom: 20px;
 }
 
-#pop-window .commodity-sort {
+.commodity-sort {
     height: 32px;
     font-size: 20px;
 }
 
-#pop-window .commodity-title,
-#pop-window .commodity-title-english,
-#pop-window .commodity-sort {
+.commodity-title,
+.commodity-title-english,
+.commodity-sort {
     display: flex;
 }
 
-#pop-window .distribution-area-button {
+.distribution-area-button {
     height: 45px;
     padding: 8px 30px;
     font-size: 20px;
@@ -580,17 +643,17 @@
     transform: translateX(-50%);
 }
 
-#pop-window .swiper-button-next:after,
-#pop-window .swiper-button-prev:after {
+.swiper-button-next:after,
+.swiper-button-prev:after {
     display: none;
 }
 
-#pop-window .next-prev-img {
+.next-prev-img {
     width: 22px;
     height: 37px;
 }
 
-#pop-window .product-img-hover {
+.product-img-hover {
     position: absolute;
     width: 330px;
     height: 360px;
@@ -603,28 +666,14 @@
     transition: 1s;
 }
 
-#pop-window .img-w-h-border-img:hover .product-img-hover {
+.img-w-h-border-img:hover .product-img-hover {
     opacity: 0.8;
 
 }
 
-#pop-window .ask-icon-hover {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    right: 0px;
-    top: 0px;
-}
 
 
-
-#pop-window .direction-body {
-    width: 350px;
-    color: #fff;
-}
-
-
-#pop-window .commodity-more-button.btn {
+.commodity-more-button.btn {
     width: 124px;
     height: 48px;
     display: flex;
@@ -638,29 +687,3 @@
     left: calc(165px - 62px);
     font-size: 18px;
 }
-
-@media (max-width:1400px) {
-
-    #pop-window .direction-body {
-        margin: auto;
-    }
-}
-@media (max-width:540px) {
-
-    #pop-window .img-w-h-border-img {
-        width: 100%;
-
-    }
-
-    #pop-window .direction-body {
-        width: 100%;
-    }
-
-    #pop-window .product-img-hover {
-        width: calc(100% - 20px);
-    }
-
-    #pop-window .product-img {
-        width: calc(100% - 20px);
-    }
-} */
