--- a/css/extra-distribution.css
+++ b/css/extra-distribution.css
@@ -1,47 +1,56 @@
-*{
+* {
     box-sizing: border-box;
 }
-body{
+
+body {
     padding: 0;
     margin: 0;
 }
 
-.main{
+.main {
     width: 100%;
     background-image: url(/images/background_img/bg_extra.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
-.container{
+
+.container {
     max-width: 1100px;
     padding: 100px 0;
     margin: auto;
 }
-.distribution-logo-group{
+
+.distribution-logo-group {
     display: flex;
 }
-.distribution-nav{
+
+.distribution-nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 100px 0;
 }
-.distribution-logo-img{
+
+.distribution-logo-img {
     width: 30px;
 }
-.distribution-logo-text{
+
+.distribution-logo-text {
     margin-left: 10px;
 }
-.distribution-logo-text-cn{
+
+.distribution-logo-text-cn {
     color: aliceblue;
     font-size: 14px;
 }
-.distribution-logo-text-en{
+
+.distribution-logo-text-en {
     margin-top: 5px;
     color: aliceblue;
     font-size: 12px;
 }
-.select-all-btn{
+
+.select-all-btn {
     font-size: 18px;
     padding: 8px 24px;
     color: aliceblue;
@@ -50,7 +59,8 @@ body{
     border-width: 1px;
     border-radius: 5px 5px 5px 5px;
 }
-.select-all-btn:hover{
+
+.select-all-btn:hover {
     background-color: #ffe282;
     border: 0px;
     border-radius: 0;
@@ -58,15 +68,16 @@ body{
     transition: color 1s, background-color 1s;
 }
 
-.swiper-and-page-group{
+.swiper-and-page-group {
     position: relative;
     display: flex;
     justify-content: space-between;
 }
-.swiper-and-page-group::after{
+
+.swiper-and-page-group::after {
     content: '';
     position: absolute;
-    top: 150%;
+    top: 180%;
     width: 100%;
     border-bottom: 1px solid white;
 }
@@ -75,148 +86,196 @@ body{
 .swiper {
     margin: -1% !important;
     width: 68%;
-  }
+}
 
-  .swiper-slide {
+.swiper-slide {
     text-align: center;
     font-size: 18px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    color: aliceblue;
-    padding: 7px 25px;
-  }
+    padding: 9px 25px;
+    margin: 0 0 0 0px;
+}
 
-  .swiper-slide img {
+.swiper-slide a{
+    color: aliceblue;
+}
+
+.swiper-slide .swiper-slide img {
     display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
 
-  .swiper-wrapper{
+.swiper-wrapper {
     width: 600px;
-  }
+}
 
 /* 上一頁 下一頁 */
-.page-up-and-page-down-group{
+.page-up-and-page-down-group {
+    width: 28%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.page-up{
+
+.page-up {
     padding: 3px 0 0;
     display: inline;
     font-size: 12px;
     margin: 0 20px 0 0;
 }
-.page-down{
+
+.page-down {
+    /* width: 100%; */
     font-size: 12px;
     margin: 0 0 0 20px;
 }
-.page-up,.page-1,.page-2,.page-3,.page-4,.page-5,.page-down{
-    background-color: unset;
+
+.page-up,
+.page-1,
+.page-2,
+.page-3,
+.page-4,
+.page-5,
+.page-down {
     color: aliceblue;
     border: 0;
 }
-.page-1,.page-2,.page-3,.page-4,.page-5{
-    margin-left: 4px ;
-    padding: 3% 3% 0 0;
+
+.page-1,
+.page-2,
+.page-3,
+.page-4,
+.page-5 {
+    margin-left: 4px;
     font-size: 14.4px;
+    padding: 3px;
+}
+.page-1{
+    background-color: aliceblue;
+    color: #000000;
 }
 
+
 /* 產品方格 */
-.prduct-grid-columns{
-    margin-top: 8%;
+.prduct-grid-columns {
+    margin-top: 4%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
 }
-.product-background{
+
+.product-background {
     position: relative;
     width: 350px;
     background-image: url(/img/shop-img-border.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
-.product-background img{
+
+.product-background img {
     width: 100%;
 }
-.product{
+
+.product {
     position: relative;
     width: 350px;
     height: 380px;
 }
-.product img{
+
+.product img {
     width: 330px;
     height: 360px;
     position: absolute;
     top: 10px;
     left: 10px;
 }
-.product-info{
-    margin-top: 5%;
+
+.product-group{
+    margin-top: 8%;
 }
-.product-title{
+.product-info {
+    margin-top: 3%;
+}
+
+.product-title {
     color: aliceblue;
     font-size: 20px;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
 }
-.product-title-en{
+
+.product-title-en {
     color: aliceblue;
     font-size: 14px;
     margin-bottom: 20px;
 }
-.product-id{
+
+.product-id {
     color: aliceblue;
     font-size: 20px;
 }
-.div-line{
+
+.div-line {
     position: relative;
     margin-top: 5%;
 }
-.div-line::after{
+
+.div-line::after {
     content: '';
     position: absolute;
     top: 150%;
     width: 100%;
     border-bottom: 1px solid white;
 }
-.page-up-and-page-down-group-buttom{
-    width: 20%;
-    height: 20px;
+
+.page-up-and-page-down-group-buttom {
+    width: 300px;
+    height: 30px;
+    text-align: center;
     display: flex;
     justify-content: space-between;
     align-items: center;
     float: right;
     padding: 3% 0;
 }
-.swiper-button-next:after, .swiper-button-prev:after{
-    content: '';
-    color: aliceblue;
-    font-size: unset !important;
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+    display: none;
 }
-:any-link{
+
+.swiper-button-next img{
+    width: 8px;
+}
+
+.swiper-button-prev img{
+    width: 8px;
+}
+:any-link {
     text-decoration: none;
-    color: aliceblue;
 }
-:any-link:active{
+
+:any-link:active {
     background-color: aliceblue;
     color: black;
 }
-.yellow-box{
+
+.yellow-box {
     width: 50px;
     position: absolute;
     top: 2.6%;
     left: 82.9%;
 }
-.yellow-box-hover{
+
+.yellow-box-hover {
     width: 50px;
     position: absolute;
     top: 0%;
     left: 85%;
 }
-.product-background-hover{
+
+.product-background-hover {
     position: absolute;
     width: 330px;
     height: 360px;
@@ -228,11 +287,13 @@ body{
     opacity: 0;
     transition: 1s;
 }
-.product-background-hover:hover{
+
+.product-background-hover:hover {
     opacity: 0.8;
     outline: #ffe282 2px solid;
 }
-.product-background-hover-more{
+
+.product-background-hover-more {
     width: 124px;
     line-height: 48px;
     text-align: center;
