--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -13,7 +13,6 @@
 #pop-window .container {
     width: 100%;
     margin: auto;
-    margin-top: 50px;
     display: flex;
     flex-direction: column;
     padding: 0 15px;
@@ -189,8 +188,8 @@
 }
 
 #pop-window .expiration-day {
-  display: flex;
-  align-self: flex-end;
+    display: flex;
+    align-self: flex-end;
 }
 
 #pop-window .commodity-expiration-title {
@@ -211,7 +210,7 @@
 }
 
 #pop-window .commodity-preservation-method {
-    
+
     margin-bottom: 10px;
     font-weight: 600;
     color: #ffffff;
@@ -228,9 +227,9 @@
 }
 
 #pop-window .method-text {
-   display: flex;
-   flex-wrap: wrap;
-   align-items: baseline;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
 }
 
 #pop-window .unit {
@@ -328,7 +327,8 @@
     width: 20%;
     height: 456px;
     margin-left: auto;
-    margin-right: auto;}
+    margin-right: auto;
+}
 
 #pop-window .my-pop-swiper {
     height: 90%;
@@ -374,14 +374,13 @@
     height: 100%;
     object-fit: cover;
 }
-.swiper-pagination-fraction {
 
+#pop-window .swiper-pagination-fraction {
     width: 50%;
 }
 
 
 .swiper-page-dec {
-    /* width: 40px; */
     height: 30px;
     background-color: rgb(175, 111, 111);
     position: absolute;
@@ -413,7 +412,6 @@
 
 .tab-switch {
     display: none;
-    
 }
 
 .tab-label {
@@ -434,7 +432,6 @@
     top: -0.25rem;
     transition: top 0.25s;
 }
-
 
 .tab-content {
     position: absolute;
@@ -467,31 +464,80 @@
     transition: all 0.35s;
 } */
 
+.tab-switch {
+    display: none;    
+}
+
+.tab-switch:checked+.tab-label {
+    background: #222222;
+    color: #ffe282;
+    border-bottom: 0;
+    border-color: 2px solid #dee2e6 #dee2e6 #f8fafc;
+    transition: all 0.35s;
+    z-index: 1;
+    top: -0.0625rem;
+}
+
+.tab-switch:checked+label+.tab-content {
+    z-index: 2;
+    opacity: 1;
+    border-color: #dee2e6 #dee2e6 #f8fafc;
+    transition: all 0.35s;
+} 
+
+.tab-label {
+    position: relative;
+    /* display: block; */
+    line-height: 2.75em;
+    height: 3em;
+    padding: 0 1.618em;
+    background: #222222;
+    border-color: #dee2e6 #dee2e6 #f8fafc;
+    color: #fff;
+    cursor: pointer;
+    top: 0;
+    transition: all 0.25s;
+}
+
+.tab-label:hover {
+    top: -0.25rem;
+    transition: top 0.25s;
+}
 
 .tab-content {
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 3rem 0;
     background-color: transparent;
     height: auto;
     color: #ffffff;
+    line-height: 2.75em;
 }
 
-.tab-content > div {
-    display: none;  
+.tab-content>div {
+    display: none;
     background: #222222;
     color: #ffffff;
-    border-bottom: 0.25rem solid #bdc3c7;
     padding: 1.618rem;
     opacity: 1;
     transition: all 0.35s;
 }
 
-.tab-switch:checked + label + .tab-content > div {
+.tab-switch:checked+label+.tab-content>div {
     display: block;
     opacity: 1;
 }
+
+.tab-switch:checked + label {
+    background: #222222;
+    color: #ffe282;
+    border-bottom: 0;
+    border-color: 2px solid #dee2e6 #dee2e6 #f8fafc;
+    transition: all 0.35s;
+    z-index: 1;
+    top: -0.0625rem;
+}
+
 
 .content-left {}
 
@@ -507,8 +553,21 @@ a {
 }
 
 .bottom-pop-window-swiper {
-    height: 1052px;
     position: relative;
+    width: 84%;
+    margin: 0 auto;
+}
+
+.recommend-title {
+    width: 100%;
+    font-size: 18px;
+    margin-bottom: 18px;
+    color: #ffffff;
+}
+.recommend-line {
+    width: 100%;
+    border-top:2px solid #ffffff;
+    margin-bottom: 32px;
 }
 
 .swiper-button-product .swiper-button-next {
@@ -553,24 +612,25 @@ a {
 .swiper-pop-bottom-slide {
     text-align: center;
     font-size: 18px;
-    margin: 0px 0px 12px;
+    /* margin: 0px 0px 12px; */
+    margin-right: 24px;
     height: calc(100% - 2px);
     background: unset;
 }
 
-.img-w-h-border-img {
-    width: 350px;
-    height: 379px;
+.img-box-border-img {
+    width: 293px;
+    height: 318px;
     background-image: url('/img/shop-img-border.png');
-    background-size: cover;
+    background-size: contain;
     margin-bottom: 20px;
     position: relative;
     top: 10px;
 }
 
 .product-img {
-    width: 330px;
-    height: 360px;
+    width: 276px;
+    height: 301px;
     position: absolute;
     right: 11px;
     top: 10px;
@@ -593,7 +653,9 @@ a {
 }
 
 .direction-body {
-    width: 350px;
+    width: 293px;
+    height: auto;
+    margin-bottom: 50px;
     color: #fff;
 }
 
@@ -647,17 +709,6 @@ a {
     display: flex;
 }
 
-.distribution-area-button {
-    height: 45px;
-    padding: 8px 30px;
-    font-size: 20px;
-    border: 1px solid #FFDD80;
-    color: #FFF;
-    position: absolute;
-    bottom: 15%;
-    left: 50%;
-    transform: translateX(-50%);
-}
 
 .swiper-button-next:after,
 .swiper-button-prev:after {
@@ -671,8 +722,8 @@ a {
 
 .product-img-hover {
     position: absolute;
-    width: 330px;
-    height: 360px;
+    width: 276px;
+    height: 301px;
     outline: #ffe282 2px solid;
     background-color: #000000;
     opacity: 0.8;
@@ -682,7 +733,7 @@ a {
     transition: 1s;
 }
 
-.img-w-h-border-img:hover .product-img-hover {
+.img-box-border-img:hover .product-img-hover {
     opacity: 0.8;
 
 }
@@ -690,8 +741,8 @@ a {
 
 
 .commodity-more-button.btn {
-    width: 124px;
-    height: 48px;
+    width: 98px;
+    height: 34px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -699,7 +750,7 @@ a {
     color: #ffe282;
     border-radius: 5px;
     position: absolute;
-    top: calc(180px - 12px);
-    left: calc(165px - 62px);
+    top: 138px;
+    left: 90px;
     font-size: 18px;
 }
