--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -37,7 +37,7 @@ ul li {
 
 #distribution-confirm .title-area {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 85px;
     height: 430px;
 }
 
@@ -176,9 +176,12 @@ ul li {
 }
 
 #distribution-confirm .pagination-top {
+    position: absolute;
     display: flex;
     justify-content: end;
     margin: 30px 0 30px;
+    right: 0px;
+    bottom: -90px;
 }
 
 #distribution-confirm .pagination-down {
