--- a/css/popwindow.css
+++ b/css/popwindow.css
@@ -3,9 +3,8 @@
 }
 
 #pop-window {
-    /* display: none; */
+    display: none;
     width: 100%;
-    height: 100%;
     position: relative;
     background-color: transparent;
 }
@@ -75,7 +74,8 @@
     height: 600px;
     display: flex;
     flex-direction: row;
-    margin: 0 auto 50px;
+    /* margin: 0 auto 50px; */
+    margin: auto;
 }
 
 
@@ -84,7 +84,7 @@
     display: flex;
     margin: 0;
     padding: 0;
-    width: 50%;
+    width: 100%;
     margin-bottom: 20px;
     position: relative;
 }
@@ -210,7 +210,6 @@
 }
 
 #pop-window .commodity-preservation-method {
-
     margin-bottom: 10px;
     font-weight: 600;
     color: #ffffff;
@@ -302,7 +301,7 @@
     }
 
     #pop-window .pop-window-close {
-        right: 45px;
+        right: 30px;
         top: 10px;
     }
 
@@ -314,7 +313,7 @@
 @media screen and (min-width:1300px) {
 
     #pop-window .pop-window-close {
-        right: -45px;
+        right: -57px;
         top: 0;
     }
 }
@@ -331,16 +330,21 @@
 }
 
 #pop-window .my-pop-swiper {
-    height: 90%;
+    height: 496px;
+    width: 85px;
     box-sizing: border-box;
-    padding: 10px 0;
+    padding: 20px 0;
+}
+
+#pop-window .my-pop-swiper img {
+    height: 93px;
 }
 
 
-
 #pop-window .my-pop-swiper-sub {
-    height: 70%;
-    width: 70%;
+    height: 437px;
+    width: 400px;
+    margin: 10px;
 }
 
 
@@ -353,6 +357,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    /* z-index: 2; */
 }
 
 
@@ -361,12 +367,9 @@
     height: 100%;
 }
 
-
 #pop-window .my-pop-swiper .swiper-slide-thumb-active {
     border: 2px solid #ffe282;
 }
-
-
 
 #pop-window .swiper-pop-top-slide img {
     display: block;
@@ -376,75 +379,52 @@
 }
 
 #pop-window .swiper-pagination-fraction {
-    width: 50%;
+    height: 24px;
+    width: 69px;
+    position: absolute;
+    padding-right: 3px;
+    left: 320px;
 }
 
+#pop-window .swiper-pagination-fraction::after {
+    content:'';
+    width: 0px;
+    height: 0px;
+    border:12px solid ;
+    border-color: transparent #ffffff #ffffff transparent  ;
+    position: absolute;
+    left: -23px;
+    top:0px;
+}
 
 .swiper-page-dec {
-    height: 30px;
-    background-color: rgb(175, 111, 111);
+    background-color: #ffffff;
+    /* position: absolute; */
+    /* bottom: 10px;
+    left: 100px; */
+}
+
+.pop-sub-border-img  {
+    width: 400px;
+    height: 437px;
+    background-image: url('/img/shop-img-border.png');
+    background-size: contain;
+    margin-bottom: 20px;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    right: -10px;
+    top: 50px;
 }
 
 
 /* tab-nav switch  */
 
-/* .tab-nav {
-    width: 84%;
-    display: flex;
-    flex-direction: row;
-}
-
-.tabs {
-    position: relative;
-    margin: 3rem 0;
-    background-color: #495057;
-    height: 14.75rem;
-}
-
-.tabs::before,
-.tabs::after {
-    content: "";
-    display: table;
-}
-
 .tab-switch {
     display: none;
 }
 
-.tab-label {
-    position: relative;
-    display: block;
-    line-height: 2.75em;
-    height: 3em;
-    padding: 0 1.618em;
-    background: #1abc9c;
-    border-color: #dee2e6 #dee2e6 #f8fafc;
-    color: #fff;
-    cursor: pointer;
-    top: 0;
-    transition: all 0.25s;
-}
-
-.tab-label:hover {
-    top: -0.25rem;
-    transition: top 0.25s;
-}
-
-.tab-content {
-    position: absolute;
-    margin-right: -100% ;
-    width: 1100px;
-    z-index: 1;
-    left: 20px;
-    padding: 1.618rem;
-    background: #222222;
-    color:#ffffff;
-    border-bottom: 0.25rem solid #bdc3c7;
-    opacity: 0;
-    transition: all 0.35s;
+.tab-nav {
+    width: 84%;
+    margin: auto;
 }
 
 .tab-switch:checked+.tab-label {
@@ -462,28 +442,7 @@
     opacity: 1;
     border-color: #dee2e6 #dee2e6 #f8fafc;
     transition: all 0.35s;
-} */
-
-.tab-switch {
-    display: none;    
 }
-
-.tab-switch:checked+.tab-label {
-    background: #222222;
-    color: #ffe282;
-    border-bottom: 0;
-    border-color: 2px solid #dee2e6 #dee2e6 #f8fafc;
-    transition: all 0.35s;
-    z-index: 1;
-    top: -0.0625rem;
-}
-
-.tab-switch:checked+label+.tab-content {
-    z-index: 2;
-    opacity: 1;
-    border-color: #dee2e6 #dee2e6 #f8fafc;
-    transition: all 0.35s;
-} 
 
 .tab-label {
     position: relative;
@@ -512,6 +471,15 @@
     height: auto;
     color: #ffffff;
     line-height: 2.75em;
+    /* border-top: 2px solid #ffffff; */
+}
+.tab-content::after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background-color: #ffffff;
+    position: absolute;
+    top: -4px;
 }
 
 .tab-content>div {
@@ -523,30 +491,32 @@
     transition: all 0.35s;
 }
 
-.tab-switch:checked+label+.tab-content>div {
+/* .tab-switch:checked+label+.tab-content>div {
     display: block;
     opacity: 1;
-}
+} */
 
-.tab-switch:checked + label {
+.tab-switch:checked+.tab-label {
     background: #222222;
     color: #ffe282;
     border-bottom: 0;
-    border-color: 2px solid #dee2e6 #dee2e6 #f8fafc;
+    padding: 8px 16px;
+    border-left: 1px solid #ffffff;
+    border-top: 1px solid #ffffff;
+    border-right: 1px solid #ffffff;
+    /* border-color: #dee2e6 #dee2e6 #f8fafc; */
     transition: all 0.35s;
     z-index: 1;
     top: -0.0625rem;
 }
 
-
-.content-left {}
-
-
-
-
+tab-label.active {
+    border-top: 1px solid #ffffff;
+    border-left: 1px solid #ffffff;
+    border-right: 1px solid #ffffff;
+}
 
 /* swiper 2 */
-
 
 a {
     text-decoration: none;
@@ -564,9 +534,10 @@ a {
     margin-bottom: 18px;
     color: #ffffff;
 }
+
 .recommend-line {
     width: 100%;
-    border-top:2px solid #ffffff;
+    border-top: 2px solid #ffffff;
     margin-bottom: 32px;
 }
 
