--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -29,7 +29,36 @@ ul li {
     padding-top: 76px;
 }
 
+#distribution-confirm .title-container {
+    padding: 0 15px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 76px;
+}
+
+@media screen and (min-width:576px) {
+    #distribution-confirm .title-container {
+        max-width: 540px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #distribution-confirm .title-container {
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width:992px) {
+    #distribution-confirm .title-container {
+        max-width: 960px;
+    }
+}
+
 @media screen and (min-width:1200px) {
+    #distribution-confirm .title-container {
+        max-width: 1140px;
+    }
+
     #distribution-confirm .container {
         width: 100%;
     }
@@ -143,8 +172,9 @@ ul li {
     border-radius: 0.25rem;
     cursor: pointer;
 }
-@media (max-width:992px){
-    #distribution-confirm .btn{
+
+@media (max-width:992px) {
+    #distribution-confirm .btn {
         bottom: 50px;
     }
 }
@@ -186,8 +216,9 @@ ul li {
     align-items: center;
     cursor: pointer;
 }
-@media (max-width:992px){
-    #distribution-confirm .swiper-slide{
+
+@media (max-width:992px) {
+    #distribution-confirm .swiper-slide {
         font-size: 16px;
     }
 }
@@ -365,7 +396,37 @@ ul li {
     padding-bottom: 150px;
 }
 
+#fillout-area .title-container {
+    padding: 0 15px;
+    width: 100%;
+    margin: 0 auto;
+    padding-top: 76px;
+}
+
+@media screen and (min-width:576px) {
+    #fillout-area .title-container {
+        max-width: 540px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #fillout-area .title-container {
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width:992px) {
+    #fillout-area .title-container {
+        max-width: 960px;
+    }
+}
+
+
 @media screen and (min-width:1200px) {
+    #fillout-area .title-container {
+        max-width: 1140px;
+    }
+
     #fillout-area .container {
         width: 100%;
     }
