distrbution-confirm加盟區修正

--- a/css/distribution-confirm.css
+++ b/css/distribution-confirm.css
@@ -591,3 +591,145 @@ ul li {
 #fillout-area .no-border {
     border: none;
 }
+
+#franchisee {
+    height: 400px;
+    padding: 50px 0 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url('../images/background_img/about_bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+#franchisee .franchisee-container-big {
+    width: 100%;
+    margin: auto;
+    padding: 50px;
+}
+
+#franchisee .franchisee-container-animation {
+    display: flex;
+    justify-content: center;
+}
+
+#franchisee .join-us-img {
+    width: 400px;
+    height: 100px;
+    background-image: url('../images/franchisee/logo-Graphic.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#franchisee .join-us-img img {
+    width: 100px;
+    height: 100px;
+}
+
+#franchisee .join-us-info {
+    display: flex;
+    flex-direction: row;
+    background-image: url('../images/franchisee/logo-Text.png');
+    width: 250px;
+    height: 60px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    margin-left: 130px;
+    margin-top: 5px;
+}
+
+@keyframes flashing {
+    0% {
+        color: #fee483;
+    }
+
+    50% {
+        color: white;
+    }
+
+    100% {
+        color: #fee483;
+    }
+}
+
+#franchisee .join-us-info h2 {
+    margin-top: 75px;
+    font-size: 18px;
+    letter-spacing: 2px;
+    text-align: center;
+    color: #fee483;
+    font-weight: 400;
+    -webkit-animation: flashing 1.5s infinite;
+    animation: flashing 1.5s infinite;
+}
+
+#franchisee .container-franchisee-title {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+#franchisee .franchisee-icon {
+    background-image: url('../images/nav/icon1-5.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 32px;
+    height: 32px;
+    margin-right: 4px;
+}
+
+#franchisee .franchisee-title {
+    color: white;
+    display: flex;
+}
+
+#franchisee .franchisee-title h1 {
+    font-size: 14px;
+    margin-bottom: 0;
+    margin-top: 7px;
+}
+
+#franchisee .franchisee-title h2 {
+    font-size: 12px;
+    margin-top: 0;
+}
+
+#franchisee .container {
+    width: 100%;
+}
+
+@media screen and (min-width:576px) {
+    #franchisee .container {
+        max-width: 540px;
+    }
+}
+
+@media screen and (min-width:768px) {
+    #franchisee .container {
+        max-width: 720px;
+    }
+}
+
+@media screen and (min-width:992px) {
+    #franchisee .container {
+        max-width: 960px;
+    }
+}
+
+@media screen and (min-width:1200px) {
+    #franchisee .container {
+        max-width: 1140px;
+        padding: 0 15px;
+    }
+}
+
+@media (max-width:576px){
+    #franchisee .join-us-img{
+        width: 269px;
+    }
+    #franchisee .join-us-info{
+        width: 141px;
+    }
+}
